syntax = "proto3";

package yummies;

// import "google/protobuf/timestamp.proto";
// import "google/protobuf/wrappers.proto";

option go_package = "github.com/joseluis8906/yummies/go-code/delivery/pkg/pb";

service HomeService {
    rpc Home(HomeRequest) returns (HomeResponse);
}

message HomeRequest {
    string customer = 1;
}

message HomeResponse {
    repeated string categories = 1;
    HomeTodaysSpecialOffer todays_special_offer = 2;
    repeated HomePopularNow popular_now = 3;
}

message HomeTodaysSpecialOffer {
    string name = 1;
    string description = 2;
    HomeMoney price = 3;
    float discount = 4;
    HomeMoney price_discounted = 5;
}

message HomePopularNow {
    string name = 1;
    HomeMoney price = 2;
    bool is_favorite = 3;
}

message HomeMoney {
    uint64 amount = 1;
    uint32 decimals = 2;
    string currency = 3;
}
